WIP: Update to Minecraft 1.21.8
Co-authored-by: Ike Johnson-Woods <contact@ike.au>